ajout du titre dans la balise title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Gerez votre code avec Git Et GitHub OpenClassRooms</title>
 </head>
 <body>
 
