titre bonjour centre

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="style.css">
 	<title>Gerez votre code avec Git Et GitHub OpenClassRooms</title>
 </head>
 <body>
