Ajout Formulaire de contact

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Gerez votre code avec Git Et GitHub OpenClassRooms</title>
 </head>
 <body>
+	<a href="contact.html">Contactez moi</a>
 	<h1>Bonjour</h1>
 	<p>J'étudie Git et GitHub sur Open Class Rooms</p>
 </body>
