--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="style.css">
 	<title>Contact</title>
 </head>
 <body>
+	<a href="index.html">Index</a>
 	<h1>Contact</h1>
+
+	<form>
+		<label for="message">Laissez moi un message</label>
+			<br/>
+		<textarea></textarea>
+	</form>
 
 </body>
 </html>
